--- a/assets/style.css
+++ b/assets/style.css
@@ -107,7 +107,7 @@ main{
     text-shadow: 2px 2px 5px #f0f0f0;
     cursor: pointer;
 }
-.glass button:hover{
+.glass #addBook:hover{
     background: linear-gradient(to right, #C4DFAA, #F5F0BB);
     color: rgb(0, 0, 0);
     text-shadow: 0 0 5px #ffffff;
@@ -146,6 +146,7 @@ main{
     margin-left: auto;
     cursor: pointer;
     border: none;
+    opacity: .5;
 }
 .checkButton:hover {
     background: url('../assetsSvg/check-solid.svg');
@@ -155,7 +156,7 @@ main{
 .trashButton {
     width: 40px;
     height: 40px;
-    
+    opacity: .5;
     background: url('../assetsSvg/trash-outline.svg');
     background-size: contain;
     margin-left: 16px;
@@ -171,7 +172,7 @@ main{
 .undoButton {
     width: 40px;
     height: 40px;
-
+    opacity: .5;
     background: url('../assetsSvg/undo-ouline.svg');
     background-size: contain;
     margin-left: auto;
@@ -182,6 +183,7 @@ main{
 .undoButton:hover {
     background: url('../assetsSvg/undo-ouline.svg');
     background-size: contain;
+    opacity: .8;
 }
 
 .checkButton:focus, .trashButton {
